action: change tile-join/pmtiles flow
Let's try to do this in one pass, without the intermediate step of
publishing the pmtiles to R2.

--- a/.github/workflows/tile-join.yml
+++ b/.github/workflows/tile-join.yml
@@ -7,23 +7,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      AREA: north-america
+      #      AREA: north-america
+      AREA: nova-scotia
 
     steps:
-      - name: Maximize build space
-        uses: AdityaGarg8/remove-unwanted-software@v2
-        with:
-          remove-android: 'true'
-          remove-dotnet: 'true'
-          remove-haskell: 'true'
-          remove-codeql: 'true'
-          remove-docker-images: 'true'
+#     - name: Maximize build space
+#       uses: AdityaGarg8/remove-unwanted-software@v2
+#       with:
+#         remove-android: 'true'
+#         remove-dotnet: 'true'
+#         remove-haskell: 'true'
+#         remove-codeql: 'true'
+#         remove-docker-images: 'true'
 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-
-      - name: Fetch binaries
-        run: sudo mkdir /mnt/layers && sudo chown runner:docker /mnt/layers && ./bin/fetch-binaries
 
       - name: Fetch tiles
         env:
@@ -31,7 +29,7 @@ jobs:
           AWS_EC2_METADATA_DISABLED: true
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: cd /mnt/layers && aws s3 sync s3://hikes-public/layers/"$AREA"/ . --no-progress
+        run: sudo mkdir /mnt/layers && sudo chown runner:docker /mnt/layers && cd /mnt/layers && aws s3 sync s3://hikes-public/layers/"$AREA"/ . --no-progress
 
       - name: tile-join
         run: /tmp/tile-join --no-tile-size-limit -o tiles.mbtiles /mnt/layers/*.mbtiles
