--- a/.github/workflows/tile-join.yml
+++ b/.github/workflows/tile-join.yml
@@ -32,7 +32,10 @@ jobs:
         run: sudo mkdir /mnt/layers && sudo chown runner:docker /mnt/layers && cd /mnt/layers && aws s3 sync s3://hikes-public/layers/"$AREA"/ . --no-progress
 
       - name: tile-join
-        run: ./bin/tile-join-docker --no-tile-size-limit -o tiles.mbtiles /mnt/layers/*.mbtiles
+        run: ./bin/docker-tile-join --no-tile-size-limit -o tiles.mbtiles /mnt/layers/*.mbtiles
+
+      - name: convert to pmtiles
+        run: rm -f /mnt/layers/*.mbtiles && ./bin/docker-pmtiles convert tiles.mbtiles /mnt/layers/tiles.pmtiles
 
       - name: Upload tiles
         env:
@@ -40,4 +43,4 @@ jobs:
           AWS_EC2_METADATA_DISABLED: true
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: aws s3 cp --no-progress tiles.mbtiles s3://hikes-public/"$AREA".mbtiles
+        run: aws s3 cp --no-progress /mnt/layers/tiles.pmtiles s3://hikes-public/"$AREA".pmtiles
