--- a/.github/workflows/tile-join.yml
+++ b/.github/workflows/tile-join.yml
@@ -34,8 +34,11 @@ jobs:
       - name: tile-join
         run: ./bin/docker-tile-join --no-tile-size-limit -o tiles.mbtiles /mnt/layers/*.mbtiles
 
+      - name: Free up space
+        run: df -h && rm -f /mny/layers/*.mbtiles && ls -l /mnt/layers && df -h
+
       - name: convert to pmtiles
-        run: df -h && rm -f /mnt/layers/*.mbtiles && ls -l /mnt/layers && ./bin/docker-pmtiles convert tiles.mbtiles /mnt/layers/tiles.pmtiles
+        run: ./bin/docker-pmtiles convert tiles.mbtiles /mnt/layers/tiles.pmtiles
 
       - name: Upload tiles
         env:
