--- a/.github/workflows/tile-join.yml
+++ b/.github/workflows/tile-join.yml
@@ -35,7 +35,7 @@ jobs:
         run: ./bin/docker-tile-join --no-tile-size-limit -o tiles.mbtiles /mnt/layers/*.mbtiles
 
       - name: Free up space
-        run: df -h && rm -f /mny/layers/*.mbtiles && ls -l /mnt/layers && df -h
+        run: df -h && rm -f /mnt/layers/*.mbtiles && ls -l /mnt/layers && df -h
 
       - name: convert to pmtiles
         run: ./bin/docker-pmtiles convert tiles.mbtiles /mnt/layers/tiles.pmtiles
