--- a/.github/workflows/tile-join.yml
+++ b/.github/workflows/tile-join.yml
@@ -7,8 +7,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      #AREA: north-america
-      AREA: nova-scotia
+      AREA: north-america
+      #AREA: nova-scotia
 
     steps:
       - name: Maximize build space
