--- a/.github/workflows/tile-join.yml
+++ b/.github/workflows/tile-join.yml
@@ -7,8 +7,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      AREA: north-america
-      #AREA: nova-scotia
+      #AREA: north-america
+      AREA: nova-scotia
 
     steps:
       - name: Maximize build space
@@ -32,13 +32,14 @@ jobs:
         run: sudo mkdir /mnt/layers && sudo chown runner:docker /mnt/layers && cd /mnt/layers && aws s3 sync s3://hikes-public/layers/"$AREA"/ . --no-progress
 
       - name: tile-join
-        run: ./bin/docker-tile-join --no-tile-size-limit -o tiles.mbtiles /mnt/layers/*.mbtiles
+        #run: ./bin/docker-tile-join --no-tile-size-limit -o tiles.mbtiles /mnt/layers/*.mbtiles
+        run: ./bin/docker-tile-smush /mnt/layers/*.mbtiles
 
       - name: Free up space
         run: df -h && rm -f /mnt/layers/*.mbtiles && ls -l /mnt/layers && df -h
 
       - name: convert to pmtiles
-        run: ./bin/docker-pmtiles convert --tmpdir /mnt/layers tiles.mbtiles /mnt/layers/tiles.pmtiles
+        run: ./bin/docker-pmtiles convert --tmpdir /mnt/layers merged.mbtiles /mnt/layers/tiles.pmtiles
 
       - name: Upload tiles
         env:
